--- a/views/layout.html
+++ b/views/layout.html
@@ -76,6 +76,20 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    
+    <script>
+      var socket = io.conect();
+      socket.on('connect', function(){
+        console.log('conectanto al servidor via webSockets');
+      });
+        socket.on('newTweet', function(tweet){
+          console.log(tweet);
+          alert('Actualizando ..fijarse en la consola');
+        });
+    </script>
+
+    <script src="/socket.io/socket.io.js"></script>
+
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
